Added more implementors of Number